--- a/templates/admin_entertainement/edit.html.twig
+++ b/templates/admin_entertainement/edit.html.twig
@@ -12,10 +12,10 @@
             </strong>
         </h1>
 
-        {{ include('admin_entertainement/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+        {{ include('admin_entertainement/_form.html.twig', {'button_label': 'Enregistrer les modifications'}) }}
 
-        <a href="{{ path('admin_entertainement_index') }}" class="btn btn-danger mb-3">
-            Retour à la liste des évènements
+        <a href="{{ path('admin_dashboard') }}" class="btn btn-danger mb-3">
+            Retour au dahsboard
         </a>
 
     </section>
