--- a/templates/admin_entertainement/new.html.twig
+++ b/templates/admin_entertainement/new.html.twig
@@ -8,6 +8,6 @@
 
         {{ include('admin_entertainement/_form.html.twig') }}
 
-        <a href="{{ path('admin_entertainement_index') }}" class="btn btn-danger">Retour à la liste des évènement</a>
+        <a href="{{ path('admin_dashboard') }}" class="btn btn-danger">Retour au dahsboard</a>
     </section>
 {% endblock %}
