--- a/templates/admin_faq/edit.html.twig
+++ b/templates/admin_faq/edit.html.twig
@@ -19,6 +19,6 @@
                 <button class="btn btn-primary">Mettre à jour</button>
                 {{ form_end(form) }}
             </div>
-        <a class="btn btn-danger mt-3" href="{{ path('admin_faq_index') }}">Retour à la liste des F.A.Q</a>
+        <a class="btn btn-danger mt-3" href="{{ path('admin_dashboard') }}">Retour au dashboard</a>
     </section>
 {% endblock %}
