--- a/templates/admin_faq/new.html.twig
+++ b/templates/admin_faq/new.html.twig
@@ -15,7 +15,7 @@
             {{ form_widget(form) }}
             <button class="btn btn-primary">Ajouter</button>
             <br>
-            <a class="btn btn-danger mt-3" href="{{ path('admin_faq_index') }}">Retour</a>
+            <a class="btn btn-danger mt-3" href="{{ path('admin_dashboard') }}">Retour au dashboard</a>
             {{ form_end(form) }}
         </div>
     </section>
