--- a/templates/admin_wilfer/_form.html.twig
+++ b/templates/admin_wilfer/_form.html.twig
@@ -22,6 +22,6 @@
 
 	<button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
 	{{ form_end(form) }}
-	<a href="{{ path('admin_wilfer_index') }}" class="btn btn-danger mt-3">Retour à la liste des wilfers</a>
+	<a href="{{ path('admin_dashboard') }}" class="btn btn-danger mt-3">Retour au dashboard</a>
 
 </section>
