--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,9 +1,9 @@
-$light: #ffffff;
+$light: rgb(241, 241, 241);
 $dark: #0f0f0f;
 
 $grey: #E5E5E5;
 
-$primary: #B79A35;
+$primary: #b79a35;
 $secondary: darken($primary, 20%);
 $info: lighten($primary, 30%);
 
