--- a/templates/admin_comment/edit.html.twig
+++ b/templates/admin_comment/edit.html.twig
@@ -10,12 +10,8 @@
 {% block body %}
 	<section class="container py-5">
 		<h1 class="text-center pb-5">Modifier le commentaire <strong class="font-italic text-primary">{{ comment.id }}</h1>
-        {{ include('admin_comment/_form.html.twig', {'button_label': 'Mettre à jour', 'class': 'btn btn-warning'}) }}
+        {{ include('admin_comment/_form.html.twig', {'button_label': 'Enregistrer les modifications', 'class': 'btn btn-warning'}) }}
 
-        <a href="{{ path('admin_comment_index') }}" class="btn btn-danger mt-3">Retour à la liste des commentaires</a>
-
-        <div class="mt-3">
-            {{ include('admin_comment/_delete_form.html.twig') }}
-        </div>
+        <a href="{{ path('admin_dashboard') }}" class="btn btn-danger mt-3">Retour au dashboard</a>
     </section>
 {% endblock %}
