--- a/templates/admin_wilfer/edit.html.twig
+++ b/templates/admin_wilfer/edit.html.twig
@@ -15,7 +15,7 @@
 				{{ wilfer.lastname }}</strong>
 		</h1>
 
-		{{ include('admin_wilfer/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+		{{ include('admin_wilfer/_form.html.twig', {'button_label': 'Enregistrer les modifications'}) }}
 
 	</section>
 {% endblock %}
