--- a/templates/includes/_navbarAdmin.html.twig
+++ b/templates/includes/_navbarAdmin.html.twig
@@ -22,13 +22,7 @@
 	<div class="collapse navbar-collapse w-100 text-left" id="navbarNav">
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item pr-3">
-				<a class="nav-link" href="{{ path("admin_wilfer_index") }}">Wilfers</a>
-			</li>
-			<li class="nav-item pr-3">
-				<a class="nav-link" href="{{ path("admin_entertainement_index") }}">Evènements</a>
-			</li>
-			<li class="nav-item pr-3">
-				<a class="nav-link" href="{{ path("admin_faq_index") }}">F.A.Q</a>
+				<a class="nav-link" href="{{ path("admin_dashboard") }}">Dashboard</a>
 			</li>
 			<li class="nav-item dropdown pr-3">
 				<a class="nav-link dropdown-toggle pt-1" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
