--- a/templates/admin_comment/index.html.twig
+++ b/templates/admin_comment/index.html.twig
@@ -1,6 +1,9 @@
-		<h1 class="mb-5 text-center text-light">Liste des
+		<h1 class="mb-2 text-center text-light">Liste des
 			<strong class="text-primary font-italic">commentaires</strong>
 		</h1>
+		<div class="div-hr mb-3 d-flex justify-content-center">
+			<hr class="hr-h1">
+		</div>
 
 		<div class="table-responsive">
 			<table class="table bg-light table-hover text-center">
