--- a/templates/admin_wilfer/index.html.twig
+++ b/templates/admin_wilfer/index.html.twig
@@ -1,4 +1,7 @@
-<h1 class="mb-5 text-center text-light">Liste des <strong class="text-primary font-italic">wilfers</strong></h1>
+<h1 class="mb-2 text-center text-light">Liste des <strong class="text-primary font-italic">wilfers</strong></h1>
+<div class="div-hr mb-3 d-flex justify-content-center">
+    <hr class="hr-h1">
+</div>
 <a class="btn btn-primary mb-3 text-light" href="{{ path('admin_wilfer_new') }}">
     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
