--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -31,3 +31,68 @@ a.btn-danger {
   filter: brightness(50%);
   box-shadow: 0 5px 5px grey;
 }
+
+// dashboard 
+.dashboard {
+  border: 2px solid darken($primary, 20%);
+  border-radius: 8px;
+  box-shadow: 4px 4px 10px 0px lighten($dark, 20%);
+  height: auto;
+  width: 80%;
+  margin: auto;
+}
+.container-onglets {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;        
+}
+
+.container-onglets > .onglet {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 10px;
+  cursor: pointer;
+}
+
+.container-contents {
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  position: relative;
+  width: 100%;
+  padding: 20px;
+  background: linear-gradient(160deg, rgba($dark,1) 0%, rgba($dark,1) 81%, rgba($primary,1) 100%);
+}
+
+.active {
+  background: $primary;
+  color: $light;
+  transition: 0.5s ease;
+}
+
+.activeContent {
+  animation: fade 0.5s forwards;
+}
+
+@keyframes fade {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+
+  }
+}
+
+.hr-h1 {
+  background: linear-gradient(90deg, $light 0%, $primary 100%);
+  height: 2px;
+  width: 50%;
+}
+
+.admin-entertainement-description p,
+.admin-faq-feedback p {
+  margin: 0;
+}
