--- a/templates/admin_entertainement/index.html.twig
+++ b/templates/admin_entertainement/index.html.twig
@@ -1,12 +1,9 @@
-
-<style>
-	.admin-entertainement-description p {
-		margin: 0;
-	}
-</style>
-<h1 class="mb-5 text-center text-light">Liste des
+<h1 class="mb-2 text-center text-light">Liste des
 	<strong class="text-primary font-italic">évènements</strong>
 </h1>
+<div class="div-hr mb-3 d-flex justify-content-center">
+    <hr class="hr-h1">
+</div>
 <a class="btn btn-primary mb-3 text-light" href="{{ path('admin_entertainement_new') }}">
 	<svg width="1em" height="1em" viewbox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 		<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
