--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -71,19 +71,38 @@
   height: 600px;
   position: relative;
   box-shadow: 4px 4px 10px lighten($black, 50%);
+  overflow: hidden;
 }
 
 .box-card .img-card {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: all 1s ease;
+}
+
+.box-card .img-card:hover {
+  transform: scale(1.2);
 }
 
 .box-card .text-card {
   position: absolute;
-  bottom: 0;
-  background-color: rgba($light, 0.75);
+  overflow: hidden;
   width: 80%;
+  max-height: 20%;
+  z-index: 100;
+  bottom: 20px;
+  background: linear-gradient(0deg, rgba(241,241,241,0.75) 80%, rgba(241,241,241,1) 100%);
+  transition: max-height 1s ease;
+}
+
+.box-card .text-card-cover {
+  position: absolute;
+  height: 20px;
+  width: 80%;
+  bottom: 0;
+  background: rgba(241,241,241,0.75);
+  z-index: 110;
 }
 
 .box-card .text-card p {
